cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformation Template for Kittens Carousel Application
  This app will run on ALB and ASG
  
Resources:
  ALBSecurityGroup:
    Type: "AWS::EC2::SecuirtyGroup"
    Properties:
      GroupDescription: Enalbe HTTP for ALB #required
      SecuirtyGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  WebServersSecGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Web Servers #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  
  WebServerTG:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      TargetType: instance
      port: 80
      Protocol: HTTP
      VpcId: !GetAtt WebServersSecGroup.VpcId
  ALB:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt ALBSecurityGroup.GroupId
      Subnets:
        - subnet-144d934b
        - subnet-6bc4a926
        - subnet-788d6d49
        - subnet-7b9d465a
        - subnet-d5c61bb3
        - subnet-dc68ffd2
      Type: application
  ALBListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions: #required
        - TargetGroupArn: !Ref WebServerTG
        - Type: forward
      LoadBalancerArn: !Ref ALB #required
      Port: 80 #required
      Protocol: HTTP #required
  WebServerLT:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateData:
        ImageId: ami-02354e95b39ca8dec
        InstanceType: t2.micro
        KeyName: AWSInstance
        SecurityGroupIds: 
          - !GetAtt WebServersSecGroup.GroupId
        TagSpecifications:
          - ResourceType: instance
            Tags: 
            - Key: Name
              Value: !Sub Web Server of ${AWS::StackName}
        UserData:
          Fn::!Base64:
            #! /bin/bash
              yum update -y
              yum install httpd -y
              FOLDER="https://https://github.com/Abdallah-Aleies/kitten-carousel/blob/master/cfn-template.yaml"
              curl -s --create-dirs -o "/var/www/html/index.html" -L "$FOLDER"index.html
              curl -s --create-dirs -o "/var/www/html/cat0.jpg" -L "$FOLDER"cat0.jpg
              curl -s --create-dirs -o "/var/www/html/cat1.jpg" -L "$FOLDER"cat1.jpg
              curl -s --create-dirs -o "/var/www/html/cat2.jpg" -L "$FOLDER"cat2.jpg
              systemctl start httpd
              systemctl enable httpd
AutoScalingGroup:
  Type: "AWS::AutoScaling::AutoScalingGroup"
  Properties:
    AvailabilityZones:
      !GetAZs ""
    DesiredCapacity: 2
    HealthCheckGracePeriod: 90
    HealthCheckType: ELB
    LaunchTemplate:
      LaunchTemplateId: !Ref WebServerLT
      Version: !GetAtt WebServerLT.LatestVersionNumber
    MaxSize: 3 #required
    MinSize: 1 #required
    TargetGroupARNs:
      - !Ref WebServerTG
Outputs:
  Website:
    Description: Kitten Corousel Application Load Balancer URL
    Value: !Sub
      - http://${ALBAddress}
      - ALBAddress: !GetAtt ALB.DNSName
